prod/bms-kamra/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: production
  labels:
    app: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: yashmakhija/kanal-kamara-admin:stable
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: production
spec:
  selector:
    app: admin
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
